--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,19 @@ dynamic = ["version", "dependencies"]
 [project.urls]
 repository = "https://github.com/euro-cordex/evaltools.git"
 
+[build-system]
+requires = [
+    "setuptools>=42",
+    "setuptools-scm>=7",
+]
+build-backend = "setuptools.build_meta"
+
 [tool.setuptools]
 packages = ["evaltools"]
+
+[tool.setuptools_scm]
+fallback_version = "999"
+version_scheme = "no-guess-dev"
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
@@ -14,10 +25,3 @@ dependencies = {file = ["requirements.txt"]}
 [tool.pytest]
 python_files = "test_*.py"
 testpaths = ["evaltools/tests"]
-
-[build-system]
-requires = [
-    "setuptools>=42",
-    "setuptools-scm>=7",
-]
-build-backend = "setuptools.build_meta"
