--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,13 @@ dynamic = ["version", "dependencies"]
 [project.urls]
 repository = "https://github.com/euro-cordex/evaltools.git"
 
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "black",
+    "isort"
+]
+
 [build-system]
 requires = [
     "setuptools>=42",
@@ -24,5 +31,5 @@ version_scheme = "no-guess-dev"
 dependencies = {file = ["requirements.txt"]}
 
 [tool.pytest]
-python_files = "test_*.py"
+python_files = ["test_*.py"]
 testpaths = ["evaltools/tests"]
