--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install evaltools
         run: |
-          python -m pip install -e .
+          python -m pip install .[dev]
       - name: Import evaltools
         run: |
           python -c "import evaltools"
+      - name: Run tests
+        timeout-minutes: 5
+        run: python -u -m pytest
